kubernetes/downloader-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: downloader-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: downloader-service
  template:
    metadata:
      labels:
        app: downloader-service
    spec:
      containers:
        - name: downloader-service
          image: korshak/ms-downloader-service:0.1
          imagePullPolicy: IfNotPresent
          #imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: downloader-service
spec:
  selector:
    app: downloader-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  #type: NodePort
