kubernetes/fetcher-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fetcher-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fetcher-service
  template:
    metadata:
      labels:
        app: fetcher-service
    spec:
      containers:
        - name: fetcher-service
          image: korshak/ms-fetcher-service:0.1
          imagePullPolicy: IfNotPresent
          #imagePullPolicy: Never
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: fetcher-service
spec:
  selector:
    app: fetcher-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  #type: NodePort
