kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-microservices-ingress
  annotations:
    spec.ingressClassName: nginx
spec:
  rules:
    - http:
        paths:
          - path: /api/downloader
            pathType: Prefix
            backend:
              service:
                name: downloader-service
                port:
                  number: 8080
          - path: /api/fetcher
            pathType: Prefix
            backend:
              service:
                name: fetcher-service
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 8080

          - path: /config-server
            pathType: Prefix
            backend:
              service:
                name: config-server
                port:
                  number: 8888
